deployment/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: improveasin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
  selector:
    app: improveasin
